# openbrowserclaw

./: .gitignore  .gitmodules  OpenBrowser.spec  README.md  Tauri.toml  config.json  fix_dummy.txt  index.html  launcher.py  main.py  manifest.json  openchad.spec  overlay.html  package-lock.json  package.json  programmatic_tool_test.py  pyproject.toml  pyrefly.toml  settings.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
Backend/openchad/litellm/: main.py  manifest.json
Backend/openchad/llamacpp/: chat_handler.py  manifest.json
Backend/openchad/mlx/: main.py  manifest.json
ModelProvider/openchad/LiteLLMModelProvider/: manifest.json
ModelProvider/openchad/LocalModelProvider/: main.py  manifest.json  settings.toml
ModelProvider/openchad/ProxyModelProvider/: manifest.json
Pipeline/openchad/chat/: main.py
SKILLS/: agent.md  control_browser.md  control_dom.md  programmatic_control_browser.md
Settings/: app_settings.toml
capabilities/: default.json  popup-webview.json  remote-webview.json
monaco/: index.ts  package.json  tsconfig.json
monaco/DiffEditor/: DiffEditor.tsx
monaco/DiffEditor/__snapshots__/: index.spec.tsx.snap
monaco/Editor/: Editor.tsx
monaco/Editor/__snapshots__/: index.spec.tsx.snap
monaco/MonacoContainer/: types.ts
openchad-react/: AgentNodeEditor.tsx  Bar.tsx  Container.tsx  ContainerOverlayApp.tsx  ContainerSingleApp.tsx  TaskBarAgent.tsx  index.ts  package.json  tsconfig.json  tsup.config.ts
openchad-react/components/: Agents.tsx  ControllableBrowsers.tsx  SearchTab.tsx  SiteRegistry.tsx  Skills.tsx  Tasks.tsx  Tools.tsx  chat.tsx  composer.tsx  default-page.tsx  dropdown.tsx  localmodel.tsx  mcp.tsx  message-container.tsx  message.tsx  model-selection.tsx  multiview.tsx  record.tsx  select-workspace.tsx  sidebar.tsx
openchad-react/components/Mutex/: mutex.ts
openchad-react/ui/: index.ts
openchad-react/utils/: index.ts  message-parser.ts  state.tsx  utils.ts
openchad-webview/: Cargo.toml  Tauri.toml  pyproject.toml
openchad-webview/src/: error.txt  lib.rs  proxy.rs
openchadpy/: main.py  pyproject.toml
openchadpy/src/openchadpy/: __init__.py  base_backend.py  base_embedding.py  base_lm.py  base_provider.py  base_stt.py  base_tts.py  base_vision.py  code_sandbox.py  context.py  credentials.py  database.py  database_manager.py  event_emitter.py  file.py  file_manager.py  main.py  mcp_manager.py  model_manager.py  model_provider.py  pipeline_base.py  plugin_watcher.py  process_audio.py  settings.py  sqlite.py  streaming_response.py  task_watcher.py  tool_base.py  tool_manager.py  webrtc_client.py  websocket_client.py
public/: iframe-mirror-test.html
public/Funnel_Display/: OFL.txt  README.txt
python/: config.json  main.py  pyproject.toml
scripts/: AppRun  build.mjs  dev.mjs  installer.nsi  openbrowser.desktop  pre_sync.py
src/: App.tsx  BrowserApp.tsx  LiveChat.tsx  OpenBrowserIcon.tsx  OverlayApp.tsx  SingleApp.tsx  TableEditor.tsx  TaskBarAgent.tsx  TaskTimer.tsx  globals.css  main.tsx
src/openchadpy/: backend_registry.py  connection_manager.py  context.py  event_emitter.py  mcp_manager.py  model_manager.py  pipeline_manager.py  process_image.py  process_video.py  proxy.py  settings_subscription.py  sqlite.py  startup.py  tool_base.py  vram_checker.py
(+14 files in other folders)
