[project]
name = "openchadpy"
version = "0.1.21"
description = "OpenChad Python Package"
authors = [
    { name = "Hafidz Ihza Pratama"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=24.1.0",
  "aiosqlite>=0.22.0",
  "dotenv>=0.9.9",
  "fastapi",
  "ffmpeg>=1.4",
  "filetype>=1.2.0",
  "httpx>=0.28.1",
  "mcp>=1.25.0",
  "numpy>=2.3.5",
  "pillow>=12.0.0",
  "pydantic>=2.12.4",
  "pygments>=2.19.2",
  "pytauri>=0.8.0",
  "openchad-webview",
  "python-pptx>=1.0.2",
  "rapidfuzz>=3.14.3",
  "scipy>=1.16.3",
  "tiktoken>=0.12.0",
  "anyio>=4.8.0",
  "uvicorn[standard]",
  "watchfiles>=1.1.1",
  "psutil>=5.9.0",
  "nvidia-ml-py>=12.0.0",
  "pyrsmi>=1.1.0",
  "aiortc>=1.14.0",
]
[tool.uv.sources]
openchad-webview = { path = '../openchad-webview/dist/openchad_webview-0.8.0-cp313-cp313-win_amd64.whl' }

[project.scripts]
openchadpy = "openchadpy.main:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
