[project]
name = "openchadpy"
version = "0.1.23"
description = "OpenChad Python Package"
authors = [
    { name = "Hafidz Ihza Pratama"},
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiofiles>=24.1.0",
  "aiosqlite>=0.22.0",
  "dotenv>=0.9.9",
  "fastapi",
  "ffmpeg>=1.4",
  "filetype>=1.2.0",
  "httpx>=0.28.1",
  "mcp>=1.25.0",
  "pydantic>=2.12.4",
  "pytauri>=0.8.0",
  "openchad-webview",
  "anyio>=4.8.0",
  "uvicorn[standard]",
  "watchfiles>=1.1.1",
  "aiortc>=1.14.0",
  "types-requests>=2.33.0.20260712",
  "types-aiofiles>=25.1.0.20260518",
  "numpy>=2.5.1",
  "litellm>=1.92.0",
]
[tool.uv.sources]
openchad-webview = { path = '../openchad-webview/dist/openchad_webview-0.8.0-cp313-cp313-win_amd64.whl' }

[project.scripts]
openchadpy = "openchadpy.main:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
