[project]
name = "python"
version = "0.1.0"
description = "OpenBrowser - AI-driven Browser built with OpenChad"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "openchadpy",
    "litellm>=1.88.0",
    "huggingface_hub",
    "llama-cpp-python>=0.3.33",
    "browsertool>=0.1.1",
    "controlbrowsertool>=0.1.1",
]

[tool.uv.sources]
openchadpy = { path = '../openchadpy', editable = true }
